# arm_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_moveit_config/share/arm_moveit_config/: .setup_assistant  package.sh
install/arm_moveit_config/share/arm_moveit_config/config/: moveit_controllers.yaml  robotic_arm.ros2_control.xacro  robotic_arm.srdf
install/moveit_resources_arm_description/share/moveit_resources_arm_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moveit_resources_arm_description/share/moveit_resources_arm_description/urdf/: arm.urdf
log/: latest_build
src/arm_moveit_config/: package.xml
src/arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  robotic_arm.urdf.xacro  ros2_controllers.yaml
src/moveit_resources/arm_description/: CMakeLists.txt  package.xml
